# fortitoolbox

./: .gitignore  CHEATSHEET.md  CLAUDE.md  CONTRIBUTING.md  GUIDE.md  NOTES-fortiswitch-fortiap-dailychecks.md  README.md  fortitoolbox-0.4.4-py3-none-any.whl  pyproject.toml
fortitoolbox/: __init__.py  __main__.py  addressbook.py  app.py  authtest.py  catalog.yaml  debugflow.py  engine.py  obfuscation.py  parsers.py  reference.py  report.py  sniffer.py  verdict.py
fortitoolbox/connectors/: base.py  console.py  mock.py  ssh.py
